# stadiacontroller

./: Cargo.toml  README.md  go.mod  go.sum  hid.go  rust-toolchain.toml  stadia.go  vigem.go
cmd/: main.go
src/: main.rs  stadia.rs
